# tviz

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  pyproject.toml  run_test.py  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx
app/(dashboard)/: layout.tsx  page.tsx
app/(dashboard)/docs/: layout.tsx  page.tsx
app/(dashboard)/docs/api/: page.tsx
app/(dashboard)/docs/examples/: page.tsx
app/(dashboard)/docs/getting-started/: page.tsx
app/(dashboard)/docs/tinker/: page.tsx
app/(dashboard)/training-run/[runId]/: page.tsx
app/(dashboard)/training-runs/: page.tsx
app/api/runs/: route.ts
app/api/stats/: route.ts
components/: Dashboard.tsx  code-highlight.tsx  notebook-server.tsx  notebook.tsx  providers.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  pagination.tsx  sidebar.tsx  table.tsx  toggle-group.tsx
examples/: basic_logging.ipynb  gsm8k_rl.py  gsm8k_with_logprobs.py  quickstart.py  rl_basic_with_tviz.py  rl_loop.py  rl_loop_with_tviz.py  sl_basic.py  sl_loop.py  tinker_rl.ipynb
hooks/: useLiveTraining.ts  useReplayTraining.ts  useRunData.ts
lib/: db.ts
lib/plugins/text/: TextRolloutCard.tsx  TextRolloutView.tsx  TextTrajectoryCard.tsx  TokenHeatmap.tsx  index.ts
lib/plugins/vision/: GeoGuessingRLViz.tsx  GeoPolicyPrediction.tsx  GeoRewardMap.tsx  index.ts
public/: logo.html
tests/: test_rl_qwen3_8b.py  test_vlm_rl_qwen3vl_30b.py
tviz/: __init__.py  client.py  logger.py  types.py
tviz/adapters/: __init__.py  tinker.py
(+5 files in other folders)
