[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tviz"
version = "0.2.2"
description = "tviz is a visualization dashboard for the Tinker API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Surya Dantuluri", email = "git@sdan.io" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Repository = "https://github.com/sdan/tviz"

[tool.hatch.build.targets.wheel]
packages = ["tviz"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "examples/",
    "node_modules/",
    ".next/",
    "app/",
    "components/",
    "hooks/",
    "lib/",
    "public/",
    "*.db",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
